# cancer

./: Cargo.toml  README.md  build.rs
assets/: cancer.info  config.toml  default.toml  example.toml
src/: afl.rs  config.rs  error.rs  font.rs  interface.rs  main.rs  renderer.rs  runner.rs  style.rs  timer.rs  tty.rs  util.rs  window.rs
src/config/: color.rs  environment.rs  input.rs  mod.rs  overlay.rs  style.rs  util.rs
src/control/: c0.rs  c1.rs  csi.rs  mod.rs  sgr.rs  util.rs
src/control/csi/: combination.rs  copy.rs  direction.rs  disposition.rs  erase.rs  expansion.rs  mod.rs  mode.rs  parallel.rs  qualification.rs  tabulation.rs  unit.rs
src/ffi/: cairo.rs  glib.rs  mod.rs  pango.rs
src/overlay/: command.rs  hints.rs  mod.rs  overlay.rs  selection.rs  status.rs
src/platform/: clipboard.rs  event.rs  glut.rs  key.rs  keyboard.rs  mod.rs  mouse.rs  proxy.rs  tty.rs  window.rs
src/platform/cocoa/: delegate.rs  proxy.rs  window.rs
src/platform/macos/: delegate.rs  proxy.rs  util.rs  window.rs
src/platform/quartz/: delegate.rs  mod.rs  proxy.rs  window.rs
src/platform/unix/: mod.rs  tty.rs
src/platform/wayland/: context.rs  environment.rs  handler.rs  mod.rs  proxy.rs  window.rs
src/platform/windows/: mod.rs  proxy.rs  window.rs
src/platform/x11/: keyboard.rs  mod.rs  proxy.rs  window.rs
src/renderer/: cache.rs  glyphs.rs  mod.rs  option.rs  renderer.rs  state.rs  style.rs
src/renderer/ligatures/: mod.rs  renderer.rs
src/renderer/standard/: cache.rs  mod.rs  renderer.rs
src/sys/: mod.rs
src/sys/cairo/: context.rs  image.rs  mod.rs  surface.rs
src/sys/glib/: list.rs  mod.rs
src/sys/pango/: attribute.rs  attribute_list.rs  attributes.rs  context.rs  description.rs  font.rs  glyph_item.rs  glyph_string.rs  item.rs  layout.rs  map.rs  metrics.rs  mod.rs  set.rs
src/terminal/: action.rs  cell.rs  cursor.rs  dirty.rs  escape.rs  free.rs  grid.rs  input.rs  interface.rs  iter.rs  key.rs  mod.rs  mode.rs  overlay.rs  row.rs  sixel.rs  tabs.rs  terminal.rs  touched.rs
src/terminal/iter/: area.rs  filter.rs  indexed.rs  mod.rs
src/util/: macros.rs  mod.rs  region.rs
tests/fuzzy/: c1  csi  dec  sixel
