[package]
name    = "cancer"
version = "0.1.0"

authors = ["meh. <meh@schizofreni.co>"]
license = "GPL-3"
build   = "build.rs"

description = "Terminal cancer."
repository  = "https://github.com/meh/terme"
keywords    = ["term", "pty"]

[profile.release]
lto   = true
panic = "abort"

[build-dependencies]
pkg-config = "0.3"

[dependencies]
log        = "0.3"
env_logger = "0.4"

libc          = "0.2"
bitflags      = "0.8"
bit-vec       = "0.4"
fnv           = "1.0"
lru-cache     = "0.1"
shlex         = "0.1"
schedule_recv = "0.1"
itertools     = "0.5"
picto         = { version = "0.4", default-features = false }
control-code  = "0.7"

clap     = "2"
app_dirs = "1.1"
toml     = "0.3"
regex    = "0.2"

unicode-segmentation = "1.0"
unicode-width        = "0.1"

[target.'cfg(unix)'.dependencies]
xcb       = { version = "0.7.6", features = ["xkb", "thread"], optional = true }
xcb-util  = { version = "0.1.5", features = ["icccm", "ewmh", "thread"], optional = true }
xkb       = { version = "0.1",   features = ["x11"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc            = { version = "0.2", optional = true }
cocoa           = { version = "0.7", optional = true }
core-foundation = { version = "0", optional = true }
core-graphics   = { version = "0.7", optional = true }

[features]
default = ["quartz", "x11"]
static  = []
fuzzy   = ["afl", "afl-plugin"]

x11 = ["xcb", "xcb-util", "xkb"]
quartz = ["objc", "cocoa", "core-foundation", "core-graphics"]

[dependencies.afl]
version  = "0.1"
optional = true

[dependencies.afl-plugin]
version  = "0.1"
optional = true
