[package]
name    = "cancer"
version = "0.1.0"

authors = ["meh. <meh@schizofreni.co>"]
license = "GPL-3"
build   = "build.rs"

description = "Terminal cancer."
repository  = "https://github.com/meh/terme"
keywords    = ["term", "pty"]

[profile.release]
lto   = true
panic = "abort"

[build-dependencies]
pkg-config = "0.3"

[dependencies]
log        = "0.4"
env_logger = "0.5"

libc          = "0.2"
bitflags      = "0.9"
bit-vec       = "0.5"
fnv           = "1.0"
lru-cache     = "0.1"
shlex         = "0.1"
schedule_recv = "0.1"
itertools     = "0.7"
picto         = { version = "0.4", default-features = false }
control-code  = "0.7"

clap     = "2"
app_dirs = "1.1"
toml     = "0.4"
regex    = "1"

unicode-segmentation = "1.0"
unicode-width        = "0.1"
tendril              = "0.4"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
xcb       = { version = "0.8", features = ["xkb", "thread"] }
xcb-util  = { version = "0.2", features = ["icccm", "ewmh", "thread"] }
xkb       = { version = "0.2", features = ["x11"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc            = "0.2"
cocoa           = "0.8"
core-foundation = "0"
core-graphics   = "0.8"

[features]
static = []
